Edit: Added new elements in the design of the sample app.

--- a/Flubber/sample/src/main/res/values/strings.xml
+++ b/Flubber/sample/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
-    <string name="app_name">Spring</string>
+    <string name="app_name">Flubber</string>
+    <string name="flubber">Flubber</string>
 </resources>
