sample: Edit: Added a panel container to MainActivity layout Add: Two panels (two fragments). One main panel and one editor panel. Add: layouts for both panels Add: app icon

--- a/Flubber/sample/src/main/res/values/strings.xml
+++ b/Flubber/sample/src/main/res/values/strings.xml
@@ -1,4 +1,8 @@
 <resources>
     <string name="app_name">Flubber</string>
     <string name="flubber">Flubber</string>
+    <string name="animations">Animations</string>
+    <string name="edit">Edit</string>
+    <string name="done">Done</string>
+    <string name="cancel">Cancel</string>
 </resources>
