--- a/Flubber/sample/src/main/res/values/strings.xml
+++ b/Flubber/sample/src/main/res/values/strings.xml
@@ -5,4 +5,8 @@
     <string name="edit">Edit</string>
     <string name="done">Done</string>
     <string name="cancel">Cancel</string>
+    <string name="tab_animation">Animation</string>
+    <string name="tab_curve">Curve</string>
+    <string name="tab_settings">Settings</string>
+    <string name="added_animations">Added animations</string>
 </resources>
