--- a/Flubber/sample/src/main/res/values/strings.xml
+++ b/Flubber/sample/src/main/res/values/strings.xml
@@ -9,4 +9,6 @@
     <string name="tab_curve">Curve</string>
     <string name="tab_settings">Settings</string>
     <string name="added_animations">Added animations</string>
+    <string name="snackAnimationRemoved">Animation removed.</string>
+    <string name="undo">UNDO</string>
 </resources>
