Add: CustomAnimationBody.java - custom AnimationBody that makes it easier to set/get a field by name. Add: PropertyMethodsHolder.java - class that holds the getter and the setter of a property. Used in CustomAnimationBody Edit: AnimationBodyModelUtil.java - removed all the reflection. Edit: Added and using RetroLambda and Stream api. Edit: SeekBarModel.java - holds now the resource id to the appropriate name of the animation body field it is representing.

--- a/Flubber/sample/src/main/res/values/strings.xml
+++ b/Flubber/sample/src/main/res/values/strings.xml
@@ -1,14 +1,20 @@
 <resources>
     <string name="app_name">Flubber</string>
     <string name="flubber">Flubber</string>
-    <string name="animations">Animations</string>
+    <string name="data">Animations</string>
     <string name="edit">Edit</string>
     <string name="done">Done</string>
     <string name="cancel">Cancel</string>
     <string name="tab_animation">Animation</string>
     <string name="tab_curve">Curve</string>
     <string name="tab_settings">Settings</string>
-    <string name="added_animations">Added animations</string>
+    <string name="added_animations">Added data</string>
     <string name="snackAnimationRemoved">Animation removed.</string>
     <string name="undo">UNDO</string>
+    <string name="duration">Duration</string>
+    <string name="delay">Delay</string>
+    <string name="force">Force</string>
+    <string name="velocity">Velocity</string>
+    <string name="damping">Damping</string>
+    <string name="scale">Scale</string>
 </resources>
